--- a/NLP_Project_Udemy.ipynb
+++ b/NLP_Project_Udemy.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "___\n",
         "\n",
-        "<a href='http://www.pieriandata.com'> <img src='../Pierian_Data_Logo.png' /></a>\n",
+        "<a href='http://www.pieriandata.com'> <img src='https://github.com/miggelucas/NLP-studies/blob/Pierian_Data_Logo.png?raw=1' /></a>\n",
         "___"
       ]
     },
@@ -2401,15 +2401,6 @@
         "\n",
         "**Some other things to try....**\n",
         "Try going back and playing around with the pipeline steps and seeing if creating a custom analyzer like we did in the lecture helps (note: it probably won't). Or recreate the pipeline with just the CountVectorizer() and NaiveBayes. Does changing the ML model at the end to another classifier help at all?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-zokot5ogNMq"
-      },
-      "source": [
-        "# Great Job!"
       ]
     }
   ]
